--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,22 @@
 /**app.wxss**/
-.container {
-  height: 100%;
+view,
+input,
+picker,
+cover-view,
+scroll-view {
+  box-sizing: border-box;
+}
+
+page {
+  position: absolute;
+  padding: 48rpx;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  font-size: 28rpx;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
   box-sizing: border-box;
-} 
+  background-color: #f5f5f5;
+}
