--- a/pages/tools/express.wxss
+++ b/pages/tools/express.wxss
@@ -1,1 +1,15 @@
-/* pages/tools/express.wxss */
+page {
+  background-color: #fff;
+}
+
+page .express-input {
+  height: 80rpx;
+  border: 1rpx solid #eee;
+  border-radius: 8rpx;
+  padding-left: 20rpx;
+}
+
+page .express-search {
+  margin-top: 30rpx;
+  text-align: center;
+}
