--- a/pages/tools/index.wxml
+++ b/pages/tools/index.wxml
@@ -1,2 +1,4 @@
 <!--pages/tools.wxml-->
-<text>pages/tools.wxml</text>
+<view class="section" data-key="express" bindtap="routerTo">
+  查快递
+</view>
