--- a/pages/tools/children.wxml
+++ b/pages/tools/children.wxml
@@ -1,4 +1,4 @@
-<!--pages/about/community.wxml-->
+<!--pages/tools/children.wxml-->
 <view class="section">
 	<view class="item" wx:for="{{list}}" bindtap="itemClick" data-item="{{item}}" wx:key="name">{{item.name}}</view>
 </view>
