--- a/pages/children/map.wxss
+++ b/pages/children/map.wxss
@@ -13,12 +13,15 @@ page .field-section {
 
 page .field-section .item {
   background-color: #fff;
-  height: 80rpx;
-  line-height: 80rpx;
-  padding: 0 40rpx;
+  padding: 20rpx 40rpx;
   border-bottom: 1rpx solid #eee;
   display: flex;
   justify-content: space-between;
+}
+
+page .field-section .item .label {
+  flex-shrink: 0;
+  margin-right: 40rpx;
 }
 
 page .field-section .item:last-child {
