--- a/pages/children/default.wxml
+++ b/pages/children/default.wxml
@@ -1,4 +1,7 @@
 <!--pages/tools/children.wxml-->
+<page-meta>
+	<navigation-bar title="{{currCommunity}}" />
+</page-meta>
 <view class="section">
 	<view class="item" wx:for="{{list}}" bindtap="itemClick" data-item="{{item}}" wx:key="name">{{item.name}}</view>
 </view>
