--- a/pages/community/index.wxss
+++ b/pages/community/index.wxss
@@ -1,4 +1,5 @@
 page {
+  background-color: #fff;
   padding: 0;
 }
 
@@ -7,19 +8,12 @@ page .section {
   background-color: #fff;
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4vw 5vw;
+  padding: 4vw 5vw;
 }
 
 page .section .item {
-  width: 28vw;
-  text-align: center;
-  margin-right: 4vw;
-  margin-top: 4vw;
+  width: 100%;
+  margin-bottom: 2vw;
   padding: 20rpx;
-  border: 1rpx solid #eee;
-  border-radius: 10rpx;
-}
-
-page .section .item:nth-child(3n) {
-  margin-right: 0;
+  border-bottom: 1rpx solid #eee;
 }
