--- a/pages/information/index.wxml
+++ b/pages/information/index.wxml
@@ -1,3 +1,6 @@
+<page-meta>
+	<navigation-bar title="{{currCommunity}}" />
+</page-meta>
 <view class="swiper-section" wx:if="{{banner.length}}">
 	<swiper indicator-dots="{{true}}" autoplay="{{true}}">
 		<block wx:for="{{banner}}" wx:key="*this">
