--- a/pages/children/default.wxml
+++ b/pages/children/default.wxml
@@ -3,5 +3,8 @@
 	<navigation-bar title="{{currCommunity}}" />
 </page-meta>
 <view class="section">
-	<view class="item" wx:for="{{list}}" bindtap="itemClick" data-item="{{item}}" wx:key="name">{{item.name}}</view>
+	<view class="item" wx:for="{{list}}" bindtap="itemClick" data-item="{{item}}" wx:key="name">
+		{{item.name}}
+		<block wx:if="{{item.type === 'tel' && item.value === ''}}">(暂缺,点击上报)</block>
+	</view>
 </view>
