--- a/pages/information/index.scss
+++ b/pages/information/index.scss
@@ -1,6 +1,16 @@
 page {
   padding: 0;
 
+  .swiper-section {
+    .swiper-item {
+      height: 30vh;
+      image{
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
   .swiper-section,
   .tool-section,
   .info-section {
