--- a/pages/information/index.wxss
+++ b/pages/information/index.wxss
@@ -2,6 +2,15 @@ page {
   padding: 0;
 }
 
+page .swiper-section .swiper-item {
+  height: 30vh;
+}
+
+page .swiper-section .swiper-item image {
+  width: 100%;
+  height: 100%;
+}
+
 page .swiper-section,
 page .tool-section,
 page .info-section {
