--- a/pages/children/media.scss
+++ b/pages/children/media.scss
@@ -3,6 +3,7 @@ page {
 
   .field-section {
     .map-section {
+      position: relative;
       width: 100%;
       height: 40vh;
       margin-bottom: 30rpx;
@@ -11,12 +12,26 @@ page {
         width: 100%;
         height: 100%;
       }
+
+      .map-nav {
+        position: absolute;
+        right: 30rpx;
+        bottom: 20rpx;
+        width: 160rpx;
+        height: 60rpx;
+        text-align: center;
+        line-height: 60rpx;
+        background-color: #fff;
+        border: 1rpx solid #eee;
+        border-radius: 30rpx;
+      }
     }
 
     .swiper-section {
       margin-bottom: 30rpx;
+
       .swiper-item {
-        
+
         image {
           width: 100%;
           height: 280rpx;
