--- a/pages/children/media.wxss
+++ b/pages/children/media.wxss
@@ -3,6 +3,7 @@ page {
 }
 
 page .field-section .map-section {
+  position: relative;
   width: 100%;
   height: 40vh;
   margin-bottom: 30rpx;
@@ -11,6 +12,19 @@ page .field-section .map-section {
 page .field-section .map-section map {
   width: 100%;
   height: 100%;
+}
+
+page .field-section .map-section .map-nav {
+  position: absolute;
+  right: 30rpx;
+  bottom: 20rpx;
+  width: 160rpx;
+  height: 60rpx;
+  text-align: center;
+  line-height: 60rpx;
+  background-color: #fff;
+  border: 1rpx solid #eee;
+  border-radius: 30rpx;
 }
 
 page .field-section .swiper-section {
