--- a/pages/children/richText.scss
+++ b/pages/children/richText.scss
@@ -1,6 +1,11 @@
 page {
   background-color: #fff;
-  rich-text {
+  padding: 0;
+
+  rich-text,
+  parser {
+    box-sizing: border-box;
     width: 100%;
+    padding: 3vw;
   }
 }
