--- a/pages/children/richText.wxss
+++ b/pages/children/richText.wxss
@@ -1,7 +1,11 @@
 page {
   background-color: #fff;
+  padding: 0;
 }
 
-page rich-text {
+page rich-text,
+page parser {
+  box-sizing: border-box;
   width: 100%;
+  padding: 3vw;
 }
