--- a/pages/news/index.scss
+++ b/pages/news/index.scss
@@ -1,19 +1,33 @@
 page {
-  background-color: #fff;
   padding: 0;
 
+  .header {
+    padding: 30rpx 40rpx;
+    background-color: #fff;
+    border: 1rpx solid #eee;
+    margin-bottom: 30rpx;
+  }
+
   .section {
-    margin-bottom: 20rpx;
+
+    margin-bottom: 30rpx;
     background-color: #fff;
     display: flex;
-    flex-wrap: wrap;
-    padding: 4vw 5vw;
+    flex-direction: column;
 
     .item {
+      padding: 20rpx 40rpx;
       width: 100%;
-      margin-bottom: 2vw;
-      padding: 20rpx;
       border-bottom: 1rpx solid #eee;
+
+      .title {
+        font-weight: 500;
+      }
+
+      .date {
+        font-size: 24rpx;
+        opacity: 0.3;
+      }
     }
   }
 }
