--- a/pages/news/index.wxml
+++ b/pages/news/index.wxml
@@ -2,6 +2,12 @@
 <page-meta>
 	<navigation-bar title="{{currCommunity}}" />
 </page-meta>
+<view class="header">
+	聚焦{{currCommunity}}小区，定期公布小区管理、公益收入、工程改造、小区三规等相关文件信息
+</view>
 <view class="section">
-	<view class="item" wx:for="{{list}}" bindtap="itemClick" data-item="{{item}}" wx:key="name">{{item.name}}({{item.date}})</view>
+	<view class="item" wx:for="{{list}}" bindtap="itemClick" data-item="{{item}}" wx:key="name">
+		<view class="title">{{item.name}}</view>
+		<view class="date">{{item.date}}</view>
+	</view>
 </view>
