--- a/pages/news/list.scss
+++ b/pages/news/list.scss
@@ -2,9 +2,11 @@ page {
   padding: 0;
 
   .header {
+    font-size: 30rpx;
+    font-weight: 500;
     padding: 30rpx 40rpx;
     background-color: #fff;
-    border: 1rpx solid #eee;
+    border-bottom: 1rpx solid #eee;
     margin-bottom: 30rpx;
   }
 
