--- a/pages/template/media.wxss
+++ b/pages/template/media.wxss
@@ -6,7 +6,7 @@ page .field-section .map-section {
   position: relative;
   width: 100%;
   height: 40vh;
-  margin-bottom: 30rpx;
+  margin-bottom: 20rpx;
 }
 
 page .field-section .map-section map {
@@ -28,26 +28,38 @@ page .field-section .map-section .map-nav {
 }
 
 page .field-section .swiper-section {
-  margin-bottom: 30rpx;
+  margin-bottom: 20rpx;
 }
 
 page .field-section .swiper-section .swiper-item image {
   width: 100%;
-  height: 280rpx;
+  height: 300rpx;
+  vertical-align: bottom;
 }
 
 page .field-section .item-section {
   position: relative;
   background-color: #fff;
   padding: 20rpx 40rpx;
-  border-bottom: 1rpx solid #eee;
+  padding-left: 30rpx;
   display: flex;
   justify-content: space-between;
+}
+
+page .field-section .item-section::before {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 40rpx;
+  right: 0;
+  height: 1rpx;
+  border-bottom: 1rpx solid #eee;
 }
 
 page .field-section .item-section .label {
   flex-shrink: 0;
   margin-right: 40rpx;
+  color: #9a9a9a;
 }
 
 page .field-section .item-section .value {
@@ -56,18 +68,10 @@ page .field-section .item-section .value {
   align-items: center;
 }
 
-page .field-section .item-section:last-child {
+page .field-section .item-section:last-child::before {
   border-bottom: 0;
 }
 
 .labelIcon_extClass {
-  position: absolute;
-  left: 4px;
-  top: 14px;
-}
-
-.valueIcon_extClass {
-  position: absolute;
-  right: 4px;
-  top: calc(50% - 8px);
+  margin-right: 16rpx;
 }
