--- a/pages/information/index.scss
+++ b/pages/information/index.scss
@@ -3,10 +3,10 @@ page {
 
   .swiper-section {
     .swiper-item {
-      height: 30vh;
-      image{
+      image {
         width: 100%;
-        height: 100%;
+        height: 300rpx;
+        vertical-align: bottom;
       }
     }
   }
@@ -30,8 +30,9 @@ page {
       margin-right: 4vw;
       margin-top: 4vw;
       padding: 20rpx;
-      border: 1rpx solid #eee;
-      border-radius: 10rpx;
+      border: 1rpx solid #2b91fd;
+      border-radius: 20rpx;
+      color: #666;
 
       &:nth-child(3n) {
         margin-right: 0;
