--- a/pages/information/index.wxss
+++ b/pages/information/index.wxss
@@ -2,13 +2,10 @@ page {
   padding: 0;
 }
 
-page .swiper-section .swiper-item {
-  height: 30vh;
-}
-
 page .swiper-section .swiper-item image {
   width: 100%;
-  height: 100%;
+  height: 300rpx;
+  vertical-align: bottom;
 }
 
 page .swiper-section,
@@ -32,8 +29,9 @@ page .info-section .item {
   margin-right: 4vw;
   margin-top: 4vw;
   padding: 20rpx;
-  border: 1rpx solid #eee;
-  border-radius: 10rpx;
+  border: 1rpx solid #2b91fd;
+  border-radius: 20rpx;
+  color: #666;
 }
 
 page .tool-section .item:nth-child(3n),
