--- a/pages/template/media.wxml
+++ b/pages/template/media.wxml
@@ -3,7 +3,7 @@
 	<block wx:for="{{fieldList}}" wx:key="name">
 		<view class="map-section" wx:if="{{item.type === 'map'}}">
 			<map scale="13" longitude="{{longitude}}" latitude="{{latitude}}" markers="{{markers}}" show-location show-compass show-scale></map>
-			<cover-view bindtap="openMap" class="map-nav">去这里</cover-view>
+			<cover-view bindtap="openMap" class="map-nav">去导航</cover-view>
 		</view>
 		<view class="swiper-section" wx:if="{{item.type === 'banner'}}">
 			<swiper indicator-dots="{{true}}" autoplay="{{true}}">
