--- a/pages/template/default.scss
+++ b/pages/template/default.scss
@@ -1,9 +1,9 @@
 page {
   padding: 0;
+  background-color: #fff;
 
   .section {
     margin-bottom: 20rpx;
-    background-color: #fff;
     display: flex;
     flex-wrap: wrap;
     padding: 0 4vw 5vw;
@@ -14,8 +14,9 @@ page {
       margin-right: 4vw;
       margin-top: 4vw;
       padding: 20rpx;
-      border: 1rpx solid #eee;
-      border-radius: 10rpx;
+      border: 1rpx solid #2b91fd;
+      border-radius: 20rpx;
+      color: #666;
 
       &:nth-child(3n) {
         margin-right: 0;
