--- a/pages/template/default.wxss
+++ b/pages/template/default.wxss
@@ -1,10 +1,10 @@
 page {
   padding: 0;
+  background-color: #fff;
 }
 
 page .section {
   margin-bottom: 20rpx;
-  background-color: #fff;
   display: flex;
   flex-wrap: wrap;
   padding: 0 4vw 5vw;
@@ -16,8 +16,9 @@ page .section .item {
   margin-right: 4vw;
   margin-top: 4vw;
   padding: 20rpx;
-  border: 1rpx solid #eee;
-  border-radius: 10rpx;
+  border: 1rpx solid #2b91fd;
+  border-radius: 20rpx;
+  color: #666;
 }
 
 page .section .item:nth-child(3n) {
