--- a/pages/unused/list.scss
+++ b/pages/unused/list.scss
@@ -1,5 +1,5 @@
 page {
-  background-color: #fff;
+
   padding: 0;
 
   .item {
@@ -7,6 +7,11 @@ page {
     padding: 20rpx 30rpx;
     border-bottom: 1rpx solid #eee;
     display: flex;
+    background-color: #fff;
+
+    &:last-child {
+      border-bottom: none;
+    }
 
     image {
       width: 280rpx;
@@ -49,5 +54,22 @@ page {
         opacity: 0.3;
       }
     }
+  }
+
+  .publish {
+    position: absolute;
+    bottom: 60rpx;
+    right: 60rpx;
+    width: 100rpx;
+    height: 100rpx;
+    line-height: 34rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #2b91fd;
+    border-radius: 50%;
+    color: #fff;
+    box-shadow: 0 2px 10px 0 rgba(0, 51, 128, .4);
   }
 }
