--- a/pages/template/richText.scss
+++ b/pages/template/richText.scss
@@ -8,4 +8,21 @@ page {
     width: 100%;
     padding: 3vw;
   }
+
+  .publish {
+    position: absolute;
+    bottom: 60rpx;
+    right: 60rpx;
+    width: 100rpx;
+    height: 100rpx;
+    line-height: 34rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #2b91fd;
+    border-radius: 50%;
+    color: #fff;
+    box-shadow: 0 2px 10px 0 rgba(0, 51, 128, .4);
+  }
 }
