--- a/pages/about/feedback.wxml
+++ b/pages/about/feedback.wxml
@@ -2,7 +2,7 @@
 <view class="page_section">
 	<view class="title">标题</view>
 	<view class="input_wrap">
-		<input value="{{title}}" bindinput="bindInputChange" data-key="title" auto-focus="{{!title}}" placeholder="请输入标题" />
+		<input disabled="{{titleDisabled}}" value="{{title}}" bindinput="bindInputChange" data-key="title" auto-focus="{{!title}}" placeholder="请输入标题" />
 	</view>
 </view>
 <view class="page_section" wx:if="type === 'ticket'">
@@ -29,7 +29,7 @@
 	<view class="title">内容</view>
 	<view class="input_wrap">
 		<textarea show-confirm-bar="{{false}}" value="{{content}}" bindinput="bindInputChange" data-key="content"
-			placeholder="请输入内容" auto-focus />
+			placeholder="{{contentPlaceholder}}" auto-focus />
 		</view>
 </view>
 
