--- a/pages/about/feedback.wxml
+++ b/pages/about/feedback.wxml
@@ -5,9 +5,9 @@
 		<input disabled="{{titleDisabled}}" value="{{title}}" bindinput="bindInputChange" data-key="title" auto-focus="{{!title}}" placeholder="请输入标题" />
 	</view>
 </view>
-<view class="page_section" wx:if="type === 'ticket'">
+<view class="page_section" wx:if="{{type === 'ticket'}}">
 	<view class="input_wrap">
-		<input value="{{floor}}" bindinput="bindInputChange" data-key="floor" placeholder="请输入具体楼层号便于统计,例:52#102" />
+		<input type="number" value="{{floor}}" bindinput="bindInputChange" data-key="floor" placeholder="请输入具体楼层号便于统计,例:52#102" />
 	</view>
 	<view class="title">我的反馈是</view>
 	<radio-group bindchange="radioChange">
@@ -28,7 +28,7 @@
 <view class="page_section">
 	<view class="title">内容</view>
 	<view class="input_wrap">
-		<textarea show-confirm-bar="{{false}}" value="{{content}}" bindinput="bindInputChange" data-key="content"
+		<textarea disabled="{{type === 'ticket'}}" show-confirm-bar="{{false}}" value="{{content}}" bindinput="bindInputChange" data-key="content"
 			placeholder="{{contentPlaceholder}}" auto-focus />
 		</view>
 </view>
