--- a/pages/about/feedback.wxml
+++ b/pages/about/feedback.wxml
@@ -7,7 +7,7 @@
 </view>
 <view class="page_section" wx:if="{{type === 'ticket'}}">
 	<view class="input_wrap">
-		<input type="number" value="{{floor}}" bindinput="bindInputChange" data-key="floor" placeholder="请输入具体楼层号便于统计,例:52#102" />
+		<input value="{{floor}}" bindinput="bindInputChange" data-key="floor" placeholder="请输入具体楼层号便于统计,例:52#102" />
 	</view>
 	<view class="title">我的反馈是</view>
 	<radio-group bindchange="radioChange">
